# ESP32-C6-Multi-Sensor-IMU-Module

./: .gitignore  BADGES_TEMPLATE.md  CONTRIBUTING.md  DETAILED_GUIDE.md  LICENSE  README.md  receiver_ip.py
.github/: FUNDING.yml
ESP32C6_IIS2MDC/: CMakeLists.txt
ESP32C6_IIS2MDC Test/main/: iis2mdc.c  iis2mdc.h  main.c
ESP32C6_IIS2MDC/main/: CMakeLists.txt
ESP32C6_IIS3DWBTR Test/: CMakeLists.txt
ESP32C6_IIS3DWBTR Test/main/: main.c
ESP32C6_IIS3DWBTR/main/: CMakeLists.txt  iis3dwb.c  iis3dwb.h
ESP32C6_IIS3_WebMonitor_HighSpeed/: CMakeLists.txt  README.md  html_part2_new.txt  partitions.csv  sdkconfig
ESP32C6_IIS3_WebMonitor_HighSpeed/data/: app.js  index.html  style.css
ESP32C6_IIS3_WebMonitor_HighSpeed/main/: CMakeLists.txt  data_buffer.c  imu_manager.c  imu_manager.h  imu_manager_old.c  led_status.c  led_status.h  main.c  udp.c  web_server.c  web_server.h
ESP32C6_IIS3_WebMonitor_HighSpeed/main/sensors/: iis3dwb_hal.c  iis3dwb_hal.h
ESP32C6_IIS3_WebMonitor_HighSpeed/main/web/: README.md  app.js  index.html  style.css
ESP32C6_IMU_BLEStreamer/: .gitignore  CMakeLists.txt  README.md  sdkconfig
ESP32C6_IMU_BLEStreamer/main/: CMakeLists.txt  ble_stream.c  imu_ble.c  imu_ble.h  imu_manager.c  led_status.c  led_status.h  main.c
ESP32C6_IMU_WebMonitor/: README.md  partitions.csv  sdkconfig
ESP32C6_IMU_WebMonitor/main/: CMakeLists.txt  ble_stream.c  ble_stream.h  data_buffer.c  data_buffer.h  imu_ble.c  imu_ble.h  imu_manager.c  imu_manager.h  led_status.c  led_status.h  main.c  udp.h  web_server.c  web_server.h
ESP32C6_IMU_WebMonitor/main/data/: app.js  index.html  styles.css
ESP32C6_IMU_WebMonitor/main/imu/: edmp_ram_extended_features_image.h  inv_imu_defs.h  inv_imu_driver.c  inv_imu_driver.h  inv_imu_driver_advanced.c  inv_imu_driver_advanced.h  inv_imu_edmp.c  inv_imu_edmp.h  inv_imu_edmp_compass.c  inv_imu_edmp_compass.h  inv_imu_edmp_defs.h  inv_imu_edmp_memmap.h  inv_imu_edmp_wearable.c  inv_imu_edmp_wearable.h  inv_imu_i2cm.h  inv_imu_regmap_be.h  inv_imu_selftest.c  inv_imu_selftest.h  inv_imu_transport.c  inv_imu_version.h
ESP32C6_IMU_WebMonitor/main/sensors/: icm45686.c  icm45686.h  iis2mdc.c  iis2mdc.h  iis3dwb.c  iis3dwb.h  scl3300.c  scl3300.h
SCL3300/: CMakeLists.txt
SCL3300 Test/: README.md
SCL3300 Test/main/: main.c  scl3300.c  scl3300.h
SCL3300/main/: CMakeLists.txt
ble-imu-dashboard/: .gitignore  BUILD_GUIDE.md  ESP32_EXAMPLE.md  README.md  build_exe.bat  build_exe.ps1  main.py  requirements.txt  run.bat  run.ps1  setup.ps1  test_ble_scan.py
ble-imu-dashboard/core/: __init__.py  ble_client.py  data_buffer.py  esp32_parser.py  exporter.py  packet_parser.py
ble-imu-dashboard/ui/: __init__.py  main_window.py  plot_widget.py  style.qss  style_dark.qss  style_light.qss
docs/: BLE_Viewer_Guide.md
icm45686/: CMakeLists.txt
icm45686 test/main/: icm45686.h  main.c
icm45686/main/: CMakeLists.txt  icm45686.c
